add post window added, but it doesnt work yet. lack of backend

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,17 @@
             android:background="@color/inputColors"
             android:foregroundTint="@color/white" />
 
+        <TextView
+            android:id="@+id/addPost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center"
+            android:text="+"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_marginRight="25sp"
+            />
 
     </androidx.cardview.widget.CardView>
 
