--- a/app/src/main/res/layout/publis_list_view.xml
+++ b/app/src/main/res/layout/publis_list_view.xml
@@ -16,8 +16,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
             <TextView
-                android:id="@+id/UserNameShare"
+                android:id="@+id/TittleShare"
                 android:textSize="25sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -25,6 +29,16 @@
                 android:textStyle="bold"
                 tools:text="UserName"/>
             <TextView
+                android:id="@+id/UserNameShare"
+                android:layout_marginStart="15sp"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textStyle="italic"
+                tools:text="UserName"/>
+            </LinearLayout>
+                <TextView
                 android:id="@+id/ContentShare"
                 android:layout_marginTop="15sp"
                 android:textSize="20sp"
